[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/bomb.png" type="Texture" id=1]
[ext_resource path="res://Pawn/Enemy/Bomb.gd" type="Script" id=2]
[ext_resource path="res://Resources/boom.png" type="Texture" id=3]
[ext_resource path="res://Resources/Boom.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 49.844

[sub_resource type="CircleShape2D" id=2]
radius = 178.246

[node name="Bomb" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5.81741e-05, -6.81714 )
scale = Vector2( 0.284192, 0.281656 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Boom" type="Sprite" parent="."]
visible = false
position = Vector2( 0.672668, -0.0328674 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
